// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table create JSX component with SASS styling 1`] = `
<table
  className="tyble sc-ifAKCX vTdhl"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb dxHksZ"
    >
      <th
        className="heading sc-htpNat evIAQd"
        onClick={[Function]}
        scope="col"
      >
        Heading 1
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH hTQFzO"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa hkgyrY"
        style={Object {}}
      >
        Cell 1
      </td>
      <td
        className="cell sc-bdVaJa hkgyrY"
        style={Object {}}
      >
        Cell 2
      </td>
      <td
        className="cell sc-bdVaJa hkgyrY"
        style={Object {}}
      >
        Cell 3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table create Tyble component with SASS style 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TableContainer
    className="tyble"
    columns={
      Array [
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "First",
          },
          "sort": [Function],
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Last",
          },
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Company",
          },
        },
      ]
    }
    data={
      Array [
        Object {
          "company": Object {
            "name": "Caspian",
          },
          "lastname": "Watson",
          "name": "Jason",
          "skills": Array [
            Object {
              "level": 100,
              "name": "TypeScript",
            },
          ],
        },
        Object {
          "company": Object {
            "name": "X-Men",
          },
          "lastname": "Xavier",
          "name": "Charles",
          "skills": Array [
            Object {
              "level": 90,
              "name": "TypeScript",
            },
          ],
        },
      ]
    }
    defaultSort={
      Object {
        "column": "First",
        "sortOrder": 0,
      }
    }
    theme={
      Object {
        "captionBgColor": undefined,
        "captionFontColor": undefined,
        "captionPadding": ".8em .8em",
        "cellBgColor": undefined,
        "cellFontColor": "#4a4a4a",
        "cellFontSize": "0.8em",
        "headingBgColor": "#f7f7f7",
        "headingBorder": "1px solid #e6e6e6",
        "headingCursor": "pointer",
        "headingFontColor": "#4a4a4a",
        "headingFontFamily": "Montserrat",
        "headingFontSize": "0.9em",
        "headingFontWeight": "normal",
        "headingPadding": "0.8em",
        "headingTextTransform": "uppercase",
        "rowAltBgColor": undefined,
        "rowBgColor": "white",
        "rowFontFamily": "Lato",
        "rowHoverColor": "#f5f8fc",
        "rowPadding": "0.8em",
        "rowSeparatorColor": "1px solid #e6e6e6",
        "rowTextAlign": "center",
        "rowTransition": "all 0.5s ease",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "caption": undefined,
      "children": Array [
        <Styled(HeadingSection)>
          <Styled(Component)
            content="First"
            onClick={[Function]}
            showDescSortingIcon={false}
          />
          <Styled(Component)
            content="Last"
            onClick={[Function]}
          />
          <Styled(Component)
            content="Company"
            onClick={[Function]}
          />
        </Styled(HeadingSection)>,
        <RowSection>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Jason"
            />
            <Styled(Component)
              content="Watson"
            />
            <Styled(Component)
              content="Caspian"
            />
          </Styled(Row)>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Charles"
            />
            <Styled(Component)
              content="Xavier"
            />
            <Styled(Component)
              content="X-Men"
            />
          </Styled(Row)>
        </RowSection>,
      ],
      "className": "tyble",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />,
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />,
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "content": "First",
              "onClick": [Function],
              "showDescSortingIcon": false,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "content": "Last",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "content": "Company",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>,
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Component)
                  content="Jason"
                />,
                <Styled(Component)
                  content="Watson"
                />,
                <Styled(Component)
                  content="Caspian"
                />,
              ],
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "content": "Jason",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "content": "Watson",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "content": "Caspian",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Component)
                  content="Charles"
                />,
                <Styled(Component)
                  content="Xavier"
                />,
                <Styled(Component)
                  content="X-Men"
                />,
              ],
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "content": "Charles",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "content": "Xavier",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "content": "X-Men",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "caption": undefined,
        "children": Array [
          <Styled(HeadingSection)>
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />
          </Styled(HeadingSection)>,
          <RowSection>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>
          </RowSection>,
        ],
        "className": "tyble",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Component)
                content="First"
                onClick={[Function]}
                showDescSortingIcon={false}
              />,
              <Styled(Component)
                content="Last"
                onClick={[Function]}
              />,
              <Styled(Component)
                content="Company"
                onClick={[Function]}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "content": "First",
                "onClick": [Function],
                "showDescSortingIcon": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "content": "Last",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "content": "Company",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Jason"
                />
                <Styled(Component)
                  content="Watson"
                />
                <Styled(Component)
                  content="Caspian"
                />
              </Styled(Row)>,
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Charles"
                />
                <Styled(Component)
                  content="Xavier"
                />
                <Styled(Component)
                  content="X-Men"
                />
              </Styled(Row)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Jason"
                  />,
                  <Styled(Component)
                    content="Watson"
                  />,
                  <Styled(Component)
                    content="Caspian"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Jason",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Watson",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Caspian",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Charles"
                  />,
                  <Styled(Component)
                    content="Xavier"
                  />,
                  <Styled(Component)
                    content="X-Men"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Charles",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Xavier",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "X-Men",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`table create Tyble component with a theme 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TableContainer
    columns={
      Array [
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "First",
          },
          "sort": [Function],
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Last",
          },
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Company",
          },
        },
      ]
    }
    data={
      Array [
        Object {
          "company": Object {
            "name": "Caspian",
          },
          "lastname": "Watson",
          "name": "Jason",
          "skills": Array [
            Object {
              "level": 100,
              "name": "TypeScript",
            },
          ],
        },
        Object {
          "company": Object {
            "name": "X-Men",
          },
          "lastname": "Xavier",
          "name": "Charles",
          "skills": Array [
            Object {
              "level": 90,
              "name": "TypeScript",
            },
          ],
        },
      ]
    }
    defaultSort={
      Object {
        "column": "First",
        "sortOrder": 0,
      }
    }
    theme={
      Object {
        "cellBgColor": "purple",
        "cellFontColor": "orange",
        "cellFontSize": "14px",
        "headingBgColor": " #f7f7f7",
        "headingFontColor": "#4a4a4a",
        "headingFontFamily": "News Cycle",
        "headingFontSize": "16px",
        "rowSeparatorColor": "black",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Table)
        caption={undefined}
        className={undefined}
      >
        <Styled(HeadingSection)>
          <Styled(Component)
            content="First"
            onClick={[Function]}
            showDescSortingIcon={false}
          />
          <Styled(Component)
            content="Last"
            onClick={[Function]}
          />
          <Styled(Component)
            content="Company"
            onClick={[Function]}
          />
        </Styled(HeadingSection)>
        <RowSection>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Jason"
            />
            <Styled(Component)
              content="Watson"
            />
            <Styled(Component)
              content="Caspian"
            />
          </Styled(Row)>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Charles"
            />
            <Styled(Component)
              content="Xavier"
            />
            <Styled(Component)
              content="X-Men"
            />
          </Styled(Row)>
        </RowSection>
      </Styled(Table)>,
      "theme": Object {
        "captionBgColor": undefined,
        "captionFontColor": undefined,
        "captionPadding": ".8em .8em",
        "cellBgColor": "purple",
        "cellFontColor": "orange",
        "cellFontSize": "14px",
        "headingBgColor": " #f7f7f7",
        "headingBorder": "1px solid #e6e6e6",
        "headingCursor": "pointer",
        "headingFontColor": "#4a4a4a",
        "headingFontFamily": "News Cycle",
        "headingFontSize": "16px",
        "headingFontWeight": "normal",
        "headingPadding": "0.8em",
        "headingTextTransform": "uppercase",
        "rowAltBgColor": undefined,
        "rowBgColor": "white",
        "rowFontFamily": "Lato",
        "rowHoverColor": "#f5f8fc",
        "rowPadding": "0.8em",
        "rowSeparatorColor": "black",
        "rowTextAlign": "center",
        "rowTransition": "all 0.5s ease",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "caption": undefined,
        "children": Array [
          <Styled(HeadingSection)>
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />
          </Styled(HeadingSection)>,
          <RowSection>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>
          </RowSection>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Component)
                content="First"
                onClick={[Function]}
                showDescSortingIcon={false}
              />,
              <Styled(Component)
                content="Last"
                onClick={[Function]}
              />,
              <Styled(Component)
                content="Company"
                onClick={[Function]}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "content": "First",
                "onClick": [Function],
                "showDescSortingIcon": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "content": "Last",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "content": "Company",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Jason"
                />
                <Styled(Component)
                  content="Watson"
                />
                <Styled(Component)
                  content="Caspian"
                />
              </Styled(Row)>,
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Charles"
                />
                <Styled(Component)
                  content="Xavier"
                />
                <Styled(Component)
                  content="X-Men"
                />
              </Styled(Row)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Jason"
                  />,
                  <Styled(Component)
                    content="Watson"
                  />,
                  <Styled(Component)
                    content="Caspian"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Jason",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Watson",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Caspian",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Charles"
                  />,
                  <Styled(Component)
                    content="Xavier"
                  />,
                  <Styled(Component)
                    content="X-Men"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Charles",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Xavier",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "X-Men",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Table)
          caption={undefined}
          className={undefined}
        >
          <Styled(HeadingSection)>
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />
          </Styled(HeadingSection)>
          <RowSection>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>
          </RowSection>
        </Styled(Table)>,
        "theme": Object {
          "captionBgColor": undefined,
          "captionFontColor": undefined,
          "captionPadding": ".8em .8em",
          "cellBgColor": "purple",
          "cellFontColor": "orange",
          "cellFontSize": "14px",
          "headingBgColor": " #f7f7f7",
          "headingBorder": "1px solid #e6e6e6",
          "headingCursor": "pointer",
          "headingFontColor": "#4a4a4a",
          "headingFontFamily": "News Cycle",
          "headingFontSize": "16px",
          "headingFontWeight": "normal",
          "headingPadding": "0.8em",
          "headingTextTransform": "uppercase",
          "rowAltBgColor": undefined,
          "rowBgColor": "white",
          "rowFontFamily": "Lato",
          "rowHoverColor": "#f5f8fc",
          "rowPadding": "0.8em",
          "rowSeparatorColor": "black",
          "rowTextAlign": "center",
          "rowTransition": "all 0.5s ease",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "caption": undefined,
          "children": Array [
            <Styled(HeadingSection)>
              <Styled(Component)
                content="First"
                onClick={[Function]}
                showDescSortingIcon={false}
              />
              <Styled(Component)
                content="Last"
                onClick={[Function]}
              />
              <Styled(Component)
                content="Company"
                onClick={[Function]}
              />
            </Styled(HeadingSection)>,
            <RowSection>
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Jason"
                />
                <Styled(Component)
                  content="Watson"
                />
                <Styled(Component)
                  content="Caspian"
                />
              </Styled(Row)>
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Charles"
                />
                <Styled(Component)
                  content="Xavier"
                />
                <Styled(Component)
                  content="X-Men"
                />
              </Styled(Row)>
            </RowSection>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Component)
                  content="First"
                  onClick={[Function]}
                  showDescSortingIcon={false}
                />,
                <Styled(Component)
                  content="Last"
                  onClick={[Function]}
                />,
                <Styled(Component)
                  content="Company"
                  onClick={[Function]}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "content": "First",
                  "onClick": [Function],
                  "showDescSortingIcon": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "content": "Last",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "content": "Company",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Styled(Row)
                  onClick={[Function]}
                >
                  <Styled(Component)
                    content="Jason"
                  />
                  <Styled(Component)
                    content="Watson"
                  />
                  <Styled(Component)
                    content="Caspian"
                  />
                </Styled(Row)>,
                <Styled(Row)
                  onClick={[Function]}
                >
                  <Styled(Component)
                    content="Charles"
                  />
                  <Styled(Component)
                    content="Xavier"
                  />
                  <Styled(Component)
                    content="X-Men"
                  />
                </Styled(Row)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Component)
                      content="Jason"
                    />,
                    <Styled(Component)
                      content="Watson"
                    />,
                    <Styled(Component)
                      content="Caspian"
                    />,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Jason",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Watson",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Caspian",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Component)
                      content="Charles"
                    />,
                    <Styled(Component)
                      content="Xavier"
                    />,
                    <Styled(Component)
                      content="X-Men"
                    />,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Charles",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Xavier",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "content": "X-Men",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`table create Tyble component with default sort. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TableContainer
    columns={
      Array [
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "First",
          },
          "sort": [Function],
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Last",
          },
        },
        Object {
          "cells": [Function],
          "heading": Object {
            "content": "Company",
          },
        },
      ]
    }
    data={
      Array [
        Object {
          "company": Object {
            "name": "Caspian",
          },
          "lastname": "Watson",
          "name": "Jason",
          "skills": Array [
            Object {
              "level": 100,
              "name": "TypeScript",
            },
          ],
        },
        Object {
          "company": Object {
            "name": "X-Men",
          },
          "lastname": "Xavier",
          "name": "Charles",
          "skills": Array [
            Object {
              "level": 90,
              "name": "TypeScript",
            },
          ],
        },
      ]
    }
    defaultSort={
      Object {
        "column": "First",
        "sortOrder": 0,
      }
    }
    theme={
      Object {
        "captionBgColor": undefined,
        "captionFontColor": undefined,
        "captionPadding": ".8em .8em",
        "cellBgColor": undefined,
        "cellFontColor": "#4a4a4a",
        "cellFontSize": "0.8em",
        "headingBgColor": "#f7f7f7",
        "headingBorder": "1px solid #e6e6e6",
        "headingCursor": "pointer",
        "headingFontColor": "#4a4a4a",
        "headingFontFamily": "Montserrat",
        "headingFontSize": "0.9em",
        "headingFontWeight": "normal",
        "headingPadding": "0.8em",
        "headingTextTransform": "uppercase",
        "rowAltBgColor": undefined,
        "rowBgColor": "white",
        "rowFontFamily": "Lato",
        "rowHoverColor": "#f5f8fc",
        "rowPadding": "0.8em",
        "rowSeparatorColor": "1px solid #e6e6e6",
        "rowTextAlign": "center",
        "rowTransition": "all 0.5s ease",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Table)
        caption={undefined}
        className={undefined}
      >
        <Styled(HeadingSection)>
          <Styled(Component)
            content="First"
            onClick={[Function]}
            showDescSortingIcon={false}
          />
          <Styled(Component)
            content="Last"
            onClick={[Function]}
          />
          <Styled(Component)
            content="Company"
            onClick={[Function]}
          />
        </Styled(HeadingSection)>
        <RowSection>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Jason"
            />
            <Styled(Component)
              content="Watson"
            />
            <Styled(Component)
              content="Caspian"
            />
          </Styled(Row)>
          <Styled(Row)
            onClick={[Function]}
          >
            <Styled(Component)
              content="Charles"
            />
            <Styled(Component)
              content="Xavier"
            />
            <Styled(Component)
              content="X-Men"
            />
          </Styled(Row)>
        </RowSection>
      </Styled(Table)>,
      "theme": Object {
        "captionBgColor": undefined,
        "captionFontColor": undefined,
        "captionPadding": ".8em .8em",
        "cellBgColor": undefined,
        "cellFontColor": "#4a4a4a",
        "cellFontSize": "0.8em",
        "headingBgColor": "#f7f7f7",
        "headingBorder": "1px solid #e6e6e6",
        "headingCursor": "pointer",
        "headingFontColor": "#4a4a4a",
        "headingFontFamily": "Montserrat",
        "headingFontSize": "0.9em",
        "headingFontWeight": "normal",
        "headingPadding": "0.8em",
        "headingTextTransform": "uppercase",
        "rowAltBgColor": undefined,
        "rowBgColor": "white",
        "rowFontFamily": "Lato",
        "rowHoverColor": "#f5f8fc",
        "rowPadding": "0.8em",
        "rowSeparatorColor": "1px solid #e6e6e6",
        "rowTextAlign": "center",
        "rowTransition": "all 0.5s ease",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "caption": undefined,
        "children": Array [
          <Styled(HeadingSection)>
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />
          </Styled(HeadingSection)>,
          <RowSection>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>
          </RowSection>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Component)
                content="First"
                onClick={[Function]}
                showDescSortingIcon={false}
              />,
              <Styled(Component)
                content="Last"
                onClick={[Function]}
              />,
              <Styled(Component)
                content="Company"
                onClick={[Function]}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "content": "First",
                "onClick": [Function],
                "showDescSortingIcon": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "content": "Last",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "content": "Company",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Jason"
                />
                <Styled(Component)
                  content="Watson"
                />
                <Styled(Component)
                  content="Caspian"
                />
              </Styled(Row)>,
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Charles"
                />
                <Styled(Component)
                  content="Xavier"
                />
                <Styled(Component)
                  content="X-Men"
                />
              </Styled(Row)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Jason"
                  />,
                  <Styled(Component)
                    content="Watson"
                  />,
                  <Styled(Component)
                    content="Caspian"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Jason",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Watson",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Caspian",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Styled(Component)
                    content="Charles"
                  />,
                  <Styled(Component)
                    content="Xavier"
                  />,
                  <Styled(Component)
                    content="X-Men"
                  />,
                ],
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Charles",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "content": "Xavier",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "content": "X-Men",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Table)
          caption={undefined}
          className={undefined}
        >
          <Styled(HeadingSection)>
            <Styled(Component)
              content="First"
              onClick={[Function]}
              showDescSortingIcon={false}
            />
            <Styled(Component)
              content="Last"
              onClick={[Function]}
            />
            <Styled(Component)
              content="Company"
              onClick={[Function]}
            />
          </Styled(HeadingSection)>
          <RowSection>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Jason"
              />
              <Styled(Component)
                content="Watson"
              />
              <Styled(Component)
                content="Caspian"
              />
            </Styled(Row)>
            <Styled(Row)
              onClick={[Function]}
            >
              <Styled(Component)
                content="Charles"
              />
              <Styled(Component)
                content="Xavier"
              />
              <Styled(Component)
                content="X-Men"
              />
            </Styled(Row)>
          </RowSection>
        </Styled(Table)>,
        "theme": Object {
          "captionBgColor": undefined,
          "captionFontColor": undefined,
          "captionPadding": ".8em .8em",
          "cellBgColor": undefined,
          "cellFontColor": "#4a4a4a",
          "cellFontSize": "0.8em",
          "headingBgColor": "#f7f7f7",
          "headingBorder": "1px solid #e6e6e6",
          "headingCursor": "pointer",
          "headingFontColor": "#4a4a4a",
          "headingFontFamily": "Montserrat",
          "headingFontSize": "0.9em",
          "headingFontWeight": "normal",
          "headingPadding": "0.8em",
          "headingTextTransform": "uppercase",
          "rowAltBgColor": undefined,
          "rowBgColor": "white",
          "rowFontFamily": "Lato",
          "rowHoverColor": "#f5f8fc",
          "rowPadding": "0.8em",
          "rowSeparatorColor": "1px solid #e6e6e6",
          "rowTextAlign": "center",
          "rowTransition": "all 0.5s ease",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "caption": undefined,
          "children": Array [
            <Styled(HeadingSection)>
              <Styled(Component)
                content="First"
                onClick={[Function]}
                showDescSortingIcon={false}
              />
              <Styled(Component)
                content="Last"
                onClick={[Function]}
              />
              <Styled(Component)
                content="Company"
                onClick={[Function]}
              />
            </Styled(HeadingSection)>,
            <RowSection>
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Jason"
                />
                <Styled(Component)
                  content="Watson"
                />
                <Styled(Component)
                  content="Caspian"
                />
              </Styled(Row)>
              <Styled(Row)
                onClick={[Function]}
              >
                <Styled(Component)
                  content="Charles"
                />
                <Styled(Component)
                  content="Xavier"
                />
                <Styled(Component)
                  content="X-Men"
                />
              </Styled(Row)>
            </RowSection>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Styled(Component)
                  content="First"
                  onClick={[Function]}
                  showDescSortingIcon={false}
                />,
                <Styled(Component)
                  content="Last"
                  onClick={[Function]}
                />,
                <Styled(Component)
                  content="Company"
                  onClick={[Function]}
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "content": "First",
                  "onClick": [Function],
                  "showDescSortingIcon": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "content": "Last",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "class",
                "props": Object {
                  "content": "Company",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Styled(Row)
                  onClick={[Function]}
                >
                  <Styled(Component)
                    content="Jason"
                  />
                  <Styled(Component)
                    content="Watson"
                  />
                  <Styled(Component)
                    content="Caspian"
                  />
                </Styled(Row)>,
                <Styled(Row)
                  onClick={[Function]}
                >
                  <Styled(Component)
                    content="Charles"
                  />
                  <Styled(Component)
                    content="Xavier"
                  />
                  <Styled(Component)
                    content="X-Men"
                  />
                </Styled(Row)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Component)
                      content="Jason"
                    />,
                    <Styled(Component)
                      content="Watson"
                    />,
                    <Styled(Component)
                      content="Caspian"
                    />,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Jason",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Watson",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Caspian",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Styled(Component)
                      content="Charles"
                    />,
                    <Styled(Component)
                      content="Xavier"
                    />,
                    <Styled(Component)
                      content="X-Men"
                    />,
                  ],
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Charles",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "content": "Xavier",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "content": "X-Men",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`table create normal JSX 1`] = `
<table
  className="sc-ifAKCX vTdhl"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb dxHksZ"
    >
      <th
        className="heading sc-htpNat evIAQd"
        onClick={[Function]}
        scope="col"
      >
        Heading 1
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH hTQFzO"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa hkgyrY"
        style={Object {}}
      >
        Cell 1
      </td>
      <td
        className="cell sc-bdVaJa hkgyrY"
        style={Object {}}
      >
        Cell 2
      </td>
      <td
        className="cell sc-bdVaJa hkgyrY"
        style="background:red"
      >
        Cell 3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table create theme provided JSX 1`] = `
<table
  className="sc-ifAKCX vTdhl"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb lgUqnC"
    >
      <th
        className="heading sc-htpNat evIAQd"
        onClick={[Function]}
        scope="col"
      >
        Heading 1
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH dCFFMJ"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa kAfbPS"
        style={Object {}}
      >
        Cell 1
      </td>
      <td
        className="cell sc-bdVaJa kAfbPS"
        style={Object {}}
      >
        Cell 2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table should contain data passed to it  1`] = `
<table
  className="sc-ifAKCX ergkHe"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb gIYmSO"
    >
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        First
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Last
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Company
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Jason
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Watson
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Caspian
      </td>
    </tr>
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Charles
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Xavier
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        X-Men
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table should render without a theme 1`] = `
<table
  className="sc-ifAKCX ergkHe"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb gIYmSO"
    >
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        First
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Last
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Company
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Charles
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Xavier
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        X-Men
      </td>
    </tr>
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Jason
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Watson
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Caspian
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table should sort DESC and ASC 1`] = `
<table
  className="sc-ifAKCX ergkHe"
>
  <thead>
    <tr
      className="heading-section sc-bxivhb gIYmSO"
    >
      <th
        className="heading sc-htpNat eewAVl"
        onClick={[Function]}
        scope="col"
      >
        First
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Last
      </th>
      <th
        className="heading sc-htpNat lkWemV"
        onClick={[Function]}
        scope="col"
      >
        Company
      </th>
    </tr>
  </thead>
  <tbody
    className="row-section"
  >
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Charles
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Xavier
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        X-Men
      </td>
    </tr>
    <tr
      className="row sc-bwzfXH mODdY"
      onClick={[Function]}
    >
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Jason
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Watson
      </td>
      <td
        className="cell sc-bdVaJa ilUYd"
        style={Object {}}
      >
        Caspian
      </td>
    </tr>
  </tbody>
</table>
`;
